--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,20 @@ buildscript {
 apply plugin: 'android-library'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
     compile project(':stan')
+    compile files('libs/jackson-annotations-2.0.5.jar')
+    compile files('libs/jackson-core-2.0.5.jar')
+    compile files('libs/jackson-databind-2.0.5.jar')
+    compile files('libs/jettison-1.2.jar')
+    compile files('libs/oauth2-client.jar')
+    compile files('libs/oauth2-common-0.2-20100928.154856-1.jar')
+    compile files('libs/oauth2-httpclient4.jar')
+    compile files('libs/slf4j-api-1.7.2.jar')
 }
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    buildToolsVersion '19.0.0'
 
     sourceSets {
         main {
