--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,12 @@ buildscript {
 
 repositories {
     mavenCentral()
+    maven { url 'http://download.crashlytics.com/maven' }
 }
 
 dependencies {
+    compile project(':stan')
+
     compile files('libs/jackson-annotations-2.0.5.jar')
     compile files('libs/jackson-core-2.0.5.jar')
     compile files('libs/jackson-databind-2.0.5.jar')
