--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,12 @@ dependencies {
 android {
     compileSdkVersion 19
     buildToolsVersion '19.0.3'
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'LICENSE.txt'
+    }
 }
