--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 //    androidTestCompile('com.google.dexmaker:dexmaker-mockito:1.1') { exclude group: 'org.hamcrest' }
     androidTestCompile('junit:junit:4.11') { exclude group: 'org.hamcrest' }
     androidTestCompile 'org.hamcrest:hamcrest-all:1.3'
+    androidTestCompile 'commons-io:commons-io:+'
 
     /* Custom compiled dexmaker. Switch back to the original one once fix https://code.google.com/p/dexmaker/issues/detail?id=28 has been applied */
     androidTestCompile files('/libs/dexmaker-1.1.jar')
