--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,20 @@ jdk: oraclejdk7
 
 env:
   matrix:
-  - ANDROID_SDKS=sysimg-19            ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a LINT=true
+  - ANDROID_SDKS=android-17,sysimg-17 ANDROID_TARGET=android-17 ANDROID_ABI=armeabi-v7a ONETIMECALLS=false
+  - ANDROID_SDKS=android-18,sysimg-18 ANDROID_TARGET=android-18 ANDROID_ABI=armeabi-v7a ONETIMECALLS=false
+  - ANDROID_SDKS=sysimg-19            ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a ONETIMECALLS=true
   global:
   - TERM=dumb
+  secure: iOXtZTLTClnqpQZ+peuPJWfeXGwuA9bU/Wsj0ZkA7/aQfNHGdfjMbn3hzkGMUtE3jojyUsLwwj+I3tGn7kJyqGtadLng7fAz5MaNm/qTHgsdDIuXK8gs+xZCnt9suhG4KP2qVM8hGvPqV9IDkwQdwTAtvV8eHn4hwMpesv8mu5U=
+  secure: M4bgOt2x3ao/1YBN620Ks/QwtM27ewk3WNSSsQBQENE4pnBScVJ2KKOzNTuSTzr/mrYM9VeVa7+wSqlgxIHV/dduuoJEwdd51DZpyq9Wb0zBXLjtIlMKxq3Zu63bfFbjU7nWT4hNtU3cAEzwcn8m3n/xnnrMKiBTqFxO2KryuPE=
+  secure: pCXP9738vidPLx3s5jV927VW9z+n+RQH15CIwGNvZzTY0+pjOwaEaMi9ngigOxHwRjmYRaD2z7JIG8kMkjjrJTcFI/CY3q/SgcSEZtm/nCMnoAGJ9VZyfb2u7gqhffb1cBlD7g4evU77PeAbtlSf6v+gTDAI1d1NaCN5/XLhZOM=
 
 before_install:
   - sudo chmod +x gradlew
   - sudo apt-get update -qq
   - sudo apt-get install -qq libstdc++6:i386 lib32z1 expect
-  - export COMPONENTS=extra-android-m2repository,build-tools-19.0.3,android-19,$ANDROID_SDKS
+  - export COMPONENTS=extra-android-m2repository,build-tools-19.0.3,android-19, doc-19,$ANDROID_SDKS
   - curl -3L https://raw.github.com/embarkmobile/android-sdk-installer/version-2/android-sdk-installer | bash /dev/stdin --install=$COMPONENTS
   - source ~/.android-sdk-installer/env
 
@@ -27,7 +32,12 @@ install:
 
 script:
   - ./gradlew connectedCheck
-  - if [[ $LINT == 'true' ]]; then ./gradlew lint ; fi
-
+  - if [[ $ONETIMECALLS == 'true' ]]; then ./gradlew lint ; fi
+  - if [[ $ONETIMECALLS == 'true' ]]; then ./gradlew generateDebugJavadoc -PANDROID_HOME=$ANDROID_HOME -PTITLE="Kama for Android ($TRAVIS_BRANCH - $TRAVIS_BUILD-NUMBER)" -POUTPUT="$HOME/docs" ; fi
+  - if [[ $ONETIMECALLS == 'true' ]]; then ncftpput -R -m -u $FTP_USER -p $FTP_PASSWORD host3.label305.com /kama-for-android/$TRAVIS_BRANCH $HOME/docs/* ; fi
 notifications:
   email: false
+
+hipchat:
+  rooms:
+    $HIPCHAT
