--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,11 @@ install:
 script:
   - ./gradlew connectedCheck
   - if [[ $ONETIMECALLS == 'true' ]]; then ./gradlew lint ; fi
-  - if [[ $ONETIMECALLS == 'true' ]]; then ./gradlew generateDebugJavadoc -PANDROID_HOME=$ANDROID_HOME -PTITLE="Kama for Android ($TRAVIS_BRANCH - $TRAVIS_BUILD-NUMBER)" -POUTPUT="$HOME/docs" ; fi
-  - if [[ $ONETIMECALLS == 'true' ]]; then ncftpput -R -m -u $FTP_USER -p $FTP_PASSWORD host3.label305.com /kama-for-android/$TRAVIS_BRANCH $HOME/docs/* ; fi
+
+after_success:
+- if [[ $ONETIMECALLS == 'true' ]]; then sudo apt-get install -qq ncftp ; fi
+- if [[ $ONETIMECALLS == 'true' ]]; then ./gradlew generateDebugJavadoc -PANDROID_HOME=$ANDROID_HOME -PTITLE="Kama for Android ($TRAVIS_BRANCH - $TRAVIS_BUILD-NUMBER)" -POUTPUT="$HOME/docs" ; fi
+- if [[ $ONETIMECALLS == 'true' ]]; then ncftpput -R -m -u $FTP_USER -p $FTP_PASSWORD host3.label305.com /kama-for-android/$TRAVIS_BRANCH $HOME/docs/* ; fi
 notifications:
   email: false
 
