--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ env:
   - ANDROID_SDKS=sysimg-19            ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a ONETIMECALLS=true
   global:
   - TERM=dumb
-  secure: iOXtZTLTClnqpQZ+peuPJWfeXGwuA9bU/Wsj0ZkA7/aQfNHGdfjMbn3hzkGMUtE3jojyUsLwwj+I3tGn7kJyqGtadLng7fAz5MaNm/qTHgsdDIuXK8gs+xZCnt9suhG4KP2qVM8hGvPqV9IDkwQdwTAtvV8eHn4hwMpesv8mu5U=
-  secure: M4bgOt2x3ao/1YBN620Ks/QwtM27ewk3WNSSsQBQENE4pnBScVJ2KKOzNTuSTzr/mrYM9VeVa7+wSqlgxIHV/dduuoJEwdd51DZpyq9Wb0zBXLjtIlMKxq3Zu63bfFbjU7nWT4hNtU3cAEzwcn8m3n/xnnrMKiBTqFxO2KryuPE=
-  secure: pCXP9738vidPLx3s5jV927VW9z+n+RQH15CIwGNvZzTY0+pjOwaEaMi9ngigOxHwRjmYRaD2z7JIG8kMkjjrJTcFI/CY3q/SgcSEZtm/nCMnoAGJ9VZyfb2u7gqhffb1cBlD7g4evU77PeAbtlSf6v+gTDAI1d1NaCN5/XLhZOM=
+  - secure: iOXtZTLTClnqpQZ+peuPJWfeXGwuA9bU/Wsj0ZkA7/aQfNHGdfjMbn3hzkGMUtE3jojyUsLwwj+I3tGn7kJyqGtadLng7fAz5MaNm/qTHgsdDIuXK8gs+xZCnt9suhG4KP2qVM8hGvPqV9IDkwQdwTAtvV8eHn4hwMpesv8mu5U=
+  - secure: M4bgOt2x3ao/1YBN620Ks/QwtM27ewk3WNSSsQBQENE4pnBScVJ2KKOzNTuSTzr/mrYM9VeVa7+wSqlgxIHV/dduuoJEwdd51DZpyq9Wb0zBXLjtIlMKxq3Zu63bfFbjU7nWT4hNtU3cAEzwcn8m3n/xnnrMKiBTqFxO2KryuPE=
+  - secure: pCXP9738vidPLx3s5jV927VW9z+n+RQH15CIwGNvZzTY0+pjOwaEaMi9ngigOxHwRjmYRaD2z7JIG8kMkjjrJTcFI/CY3q/SgcSEZtm/nCMnoAGJ9VZyfb2u7gqhffb1cBlD7g4evU77PeAbtlSf6v+gTDAI1d1NaCN5/XLhZOM=
 
 before_install:
   - sudo chmod +x gradlew
