--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'android-library'
 
+apply from: 'pushMaven.gradle'
+
 buildscript {
     repositories {
         mavenCentral()
@@ -38,6 +40,13 @@ dependencies {
 android {
     compileSdkVersion 19
     buildToolsVersion '19.0.3'
+
+    defaultConfig {
+        minSdkVersion 8
+        targetSdkVersion 19
+        versionCode 1
+        versionName VERSION_NAME
+    }
 
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
