--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.label305.kama"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="com.label305.kama">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
     <application android:allowBackup="true" />
 </manifest>
