--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,11 @@ android {
         versionName VERSION_NAME
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/LICENSE'
