--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,9 @@ script:
 after_success:
   - if [[ $JAVADOC == 'true' ]]; then sudo apt-get install -qq ncftp ; fi
   - if [[ $JAVADOC == 'true' ]]; then ./gradlew generateDebugJavadoc -PANDROID_HOME=$ANDROID_HOME -PTITLE="Kama for Android ($TRAVIS_BRANCH - $TRAVIS_BUILD-NUMBER)" -POUTPUT="$HOME/docs" ; fi
-  - if [[ $JAVADOC == 'true' && $TRAVIS_BRANCH == 'dev' ]]; then ncftpput -R -m -u $FTP_USER -p $FTP_PASSWORD host3.label305.com /kama-for-android/$TRAVIS_BRANCH $HOME/docs/* ; fi
+  - if [[ $JAVADOC == 'true' ]]; then ncftpput -R -m -u $FTP_USER -p $FTP_PASSWORD host3.label305.com /kama-for-android/$TRAVIS_BRANCH $HOME/docs/* ; fi
 
-  - if [[ $MAVEN == 'true' ]]; then ./gradlew uploadArchives -PnexusUsername=${NEXUS_USERNAME} -PnexusPassword=${NEXUS_PASSWORD} ; fi
+  - if [[ $MAVEN == 'true' && $TRAVIS_BRANCH == 'dev']]; then ./gradlew uploadArchives -PnexusUsername=${NEXUS_USERNAME} -PnexusPassword=${NEXUS_PASSWORD} ; fi
 notifications:
   email: false
 
