--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'android-library'
 
-apply from: 'pushMaven.gradle'
+apply from: '../pushMaven.gradle'
 apply from: 'generateJavadoc.gradle'
 
 buildscript {
