--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ env:
   - secure: pCXP9738vidPLx3s5jV927VW9z+n+RQH15CIwGNvZzTY0+pjOwaEaMi9ngigOxHwRjmYRaD2z7JIG8kMkjjrJTcFI/CY3q/SgcSEZtm/nCMnoAGJ9VZyfb2u7gqhffb1cBlD7g4evU77PeAbtlSf6v+gTDAI1d1NaCN5/XLhZOM=
   # NEXUS_USERNAME, NEXUS_PASSWORD
   - secure: m83OO8zBxAeNJ3ij8rBwFqf+/hEDN9Ad3zSB4U1CRAdMPKi00dyQjTjkcjA6O75griECvREVXmsP5QwfhWpz4OSoi9NKt4SsFLd5Pt8KSX10eolaRjj/cQRMtEa9xdESVr7Sg0j1iUGJzID87dgS61gTOY9b30eeJ8l1A+vh0Ds=
+  # GH_TOKEN_KAMA
+  - secure: "SUBxyZz8hdHKvR6mvbIrv6zBN9FRNq0uk47ku4Ri3QdX8mt2ndfnEVSALiinTYxvxWOMYbSzeLVhOlpq6ULuCmnxuFU3KCuOGiawgrcKgZF9173HQ0Y3laAxsRVDdiB61NVEhKe5STTaOFNewKe1JkAfSpyfgd6sB2FT3lXxG8w="
 
 before_install:
   - curl -3L -o wait_for_emulator https://github.com/embarkmobile/android-sdk-installer/raw/version-2/wait_for_emulator
