--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,18 +1,8 @@
 apply plugin: 'android-library'
 apply plugin: 'github-pages'
 
-apply from: 'generateJavadoc.gradle'
-apply from: 'pushMaven.gradle'
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.+'
-        classpath 'org.ajoberstar:gradle-git:0.8.+'
-    }
-}
+apply from: '../generateJavadoc.gradle'
+apply from: '../pushMaven.gradle'
 
 repositories {
     mavenCentral()
