--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,13 +9,15 @@ repositories {
 }
 
 dependencies {
-    compile 'com.fasterxml.jackson.core:jackson-core:2.3.+'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.+'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.+'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.3.4'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.4'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.4'
 
     compile 'net.smartam.leeloo:oauth2-client:0.1'
     compile 'net.smartam.leeloo:oauth2-common:0.1'
     compile 'net.smartam.leeloo:oauth2-httpclient4:0.1'
+
+    compile 'com.intellij:annotations:12.0'
 
     /* Test libraries */
 
